--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "emptylistplaceholder",
   "widgetName": "EmptyListPlaceholder",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Empty list placeholder",
   "copyright": "2020 Timeseries",
   "author": "Marco Bouwkamp",
@@ -29,6 +29,7 @@
     "@types/react-dom": "~16.9.0"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "fibers": "^5.0.0"
   }
 }
